# sktime-benchmark

./: .gitignore  M4_competition_yearly_results.csv  README.md  benchmark.slurm  forecasting_results.csv  pyproject.toml  run_benchmark.py
catalogue/: __init__.py  forecasting_catalogue.py
